--- a/invision-app/index.html
+++ b/invision-app/index.html
@@ -1,6 +1,6 @@
 <html>
    <head>
-      <meta charset = "UTF-8">
+      <meta charset = "UTF-8"/>
       <title>React App using webpack</title>
    </head>
    <body>
